# fixed_point

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  ci_build.bat  ci_build.sh  demo.cpp  fixed_point.h  test.cpp
include/: fixed_point.h  tests.h
include/fixed_point/: fixed_point.hpp
include/fixed_point/detail/: arithmetic.hpp  base.hpp  bit_ops.hpp  comparison.hpp  numeric_limits.hpp  standard_types.hpp  stream.hpp  util.hpp
tests/: Makefile  arithmetic.cpp  casting.cpp  comparison.cpp  constructors.cpp
